--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -338,7 +338,7 @@ input[type=text]:focus.invalid {
         height: 100%;
         object-fit: contain;
         //transition: all 500ms ease;
-        transform: translateY(-2%);
+        //transform: translateY(-2%);
         margin-left: 0rem !important;
         margin-right: 0rem !important;
         top: 0;
