--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -429,3 +429,17 @@ div.wpforms-container-full .wpforms-form .wpforms-field-label {
     }
   }
 }
+
+.noResult {
+  text-align: center;
+  color: #ffffff;
+  a {
+    color: #ffffff !important;
+    &:hover {
+      color: #8ef3ff !important;
+    }
+  }
+}
+
+
+
