--- a/wp-content/themes/municipio-nsr/assets/source/sass/materializecss/_roboto.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/materializecss/_roboto.scss
@@ -1,4 +1,4 @@
-@font-face {
+/*@font-face {
     font-family: "Roboto";
     src: local(Roboto Thin), url('#{$roboto-font-path}Roboto-Thin.eot');
     src: url("#{$roboto-font-path}Roboto-Thin.eot?#iefix") format('embedded-opentype'),
@@ -47,3 +47,4 @@
         url("#{$roboto-font-path}Roboto-Bold.ttf") format("truetype");
     font-weight: 700;
 }
+*/
