Error no result

--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -393,7 +393,7 @@ input[type=text]:focus.invalid {
         font-style: italic;
     }
 
-    .sorteringsguiden h4, .search-autocomplete h4, .search-fetchPlanner h4, .errorSortguide h4, .errorPages h4 {
+    .sorteringsguiden h4, .search-autocomplete h4, .errorFetchPlanner h4, .errorSortguide h4, .errorPages h4 {
         font-size: 1.40rem;
         line-height: 25px !important;
         display: table;
