--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -530,7 +530,9 @@ input[type=text]:focus.invalid {
         font-size: 0.7rem;
         background: darken($darkerGreen, 10%) !important;
         min-width: 0.9rem !important;
+        /*FREDRIK
         margin-left: 5px;
+        */
     }
     .fp-table .badge,
     .fp-table-mobile .badge {
@@ -863,10 +865,10 @@ tr {
 
 @media (max-width: 450px) {
     .searchArea .preloader-wrapper {
-        top: 16px;
-        left: 16px;
-        width: 24px !important;
-        height: 24px !important;
+        top: 40px;
+        right: 40px;
+        width: 20px !important;
+        height: 20px !important;
     }
     .searchArea .spinner-layer {
         border-color: $white !important;
