--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -970,10 +970,9 @@ tr {
 }
 
 .noResult {
-    text-align: center;
-    color: #ffffff;
+
     a {
-        color: #ffffff !important;
+
         &:hover {
             color: #8ef3ff !important;
         }
@@ -1000,6 +999,7 @@ tr {
         background:$defaultDarkGreenSearchNav;
         margin: 0 3px;
         text-align:center;
+        cursor:pointer;
         &:nth-child(1) {
             border-top-left-radius: 8px;
         }
@@ -1054,6 +1054,6 @@ tr {
     font-size: 1.7rem !important;
 
 }
-.nsr-elasticSearch-nav {
+.searchView li {
 
 }
