--- a/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
+++ b/wp-content/plugins/nsr-vc-extended/source/sass/nsr-vc-extended.scss
@@ -424,6 +424,59 @@ input[type=text]:focus.invalid {
     ul {
         //box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
     }
+
+
+     ::-webkit-input-placeholder {
+        /* Chrome/Opera/Safari */
+        color: $white !important;
+    }
+     ::-moz-placeholder {
+        /* Firefox 19+ */
+        color: $white !important;
+    }
+     :-ms-input-placeholder {
+        /* IE 10+ */
+        color: $white !important;
+    }
+     :-moz-placeholder {
+        /* Firefox 18- */
+        color: $white !important;
+    }
+    .relative {
+        position: relative;
+    }
+    .preloader-wrapper {
+        width: 18px !important;
+        height: 18px !important;
+        //margin-right: 8px;
+        margin-right: 3rem;
+        float: right;
+    }
+    .search-button {
+        position: absolute;
+        border-top-right-radius: 12px!important;
+        border-bottom-right-radius: 12px!important;
+        /* padding: 0 1rem; */
+        max-width: 9rem;
+        margin: 0!important;
+        top: 0;
+        right: -96px;
+        border: 3.5px solid #fff;
+        height: 65px;
+        box-shadow: none!important;
+
+
+
+    }
+    @media (max-width: 450px) {
+        .search-button {
+            //max-width: 4rem;
+            //right: 10px;
+        }
+    }
+}
+#nsr-searchResult {
+
     .search-autocomplete-nothing-found {
         display: block;
         padding: 7.5px 10px;
@@ -593,7 +646,7 @@ input[type=text]:focus.invalid {
     }
     .fp-table .badge,
     .fp-table-mobile .badge {
-/* FREDRIK        margin-top: 5px; */
+        /* FREDRIK        margin-top: 5px; */
         margin-top:0px;
     }
     .badgeInfo .badge {
@@ -821,56 +874,7 @@ input[type=text]:focus.invalid {
             top: 210px;
         }
     }
-     ::-webkit-input-placeholder {
-        /* Chrome/Opera/Safari */
-        color: $white !important;
-    }
-     ::-moz-placeholder {
-        /* Firefox 19+ */
-        color: $white !important;
-    }
-     :-ms-input-placeholder {
-        /* IE 10+ */
-        color: $white !important;
-    }
-     :-moz-placeholder {
-        /* Firefox 18- */
-        color: $white !important;
-    }
-    .relative {
-        position: relative;
-    }
-    .preloader-wrapper {
-        width: 18px !important;
-        height: 18px !important;
-        //margin-right: 8px;
-        margin-right: 3rem;
-        float: right;
-    }
-    .search-button {
-        position: absolute;
-        border-top-right-radius: 12px!important;
-        border-bottom-right-radius: 12px!important;
-        /* padding: 0 1rem; */
-        max-width: 9rem;
-        margin: 0!important;
-        top: 0;
-        right: -96px;
-        border: 3.5px solid #fff;
-        height: 65px;
-        box-shadow: none!important;
-
-
-
-    }
-    @media (max-width: 450px) {
-        .search-button {
-            //max-width: 4rem;
-            //right: 10px;
-        }
-    }
 }
-
 td,
 tr {
     vertical-align: top !important;
